--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, inital-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -10,19 +10,19 @@
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview-baku">
+      <div class="preview baku">
         <img src="images/baku.jpg" alt="baku">
         <h2>Baku</h2>
       </div>
-      <div class="preview-london">
+      <div class="preview london">
         <img src="images/london.png" alt="london">
-        <h2>London</h2>
+        <h2>London</h2.
       </div>
-      <div class="preview-madrid">
+      <div class="preview madrid">
         <img src="images/madrid.jpg" alt="madrid">
         <h2>Madrid</h2>
       </div>
-      <div class="preview-rome">
+      <div class="preview rome">
         <img src="images/rome.jpg" alt="rome">
         <h2>Rome</h2>
       </div>
